--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 body {
-    color:goldenrod;
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: 300;
+    color: goldenrod;
+}
+
+/* logo and menu */
+
+#logo {
+    font-size: 250%;
+    float:left;
+    margin-left: 30px;
+    text-decoration: none;
+    color: slategrey;
+}
+
+#nav-menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#nav-menu, #logo {
+line-height: 75px;
+}
+
+#nav-menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+#nav-menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#nav-menu a:hover {
+    color: green;
 }
