--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,25 @@ line-height: 75px;
     width: 100%;
     background: url(../images/Webp.net-resizeimage.jpg) no-repeat;
 }
+
+/* footer */
+footer {
+    height: 150px;
+    border-top: 1px gray solid;
+}
+/* social networks */
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks > li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 150%;
+    margin: 0;
+    padding: 4%;
+    color: slategrey;
+}
