--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,11 +66,13 @@ line-height: 75px;
     clear: both;
     width: 33%;
     vertical-align: middle;
+    position: relative;
+    top: 50px;
 }
 
 /* home info*/
 #home-info {
-    height: 600px;
+    height: 550px;
     display: flex;
     }
 
@@ -78,7 +80,7 @@ line-height: 75px;
         text-align: center;
         position: absolute;
         top: 80px;
-        right: 500px;
+        right: 325px;
     }
     
 #weather {
