--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
 
 header{
     overflow: hidden;
+    border: 1px gray solid;
 }
 
 h1, h2 {
@@ -81,6 +82,7 @@ line-height: 75px;
         position: absolute;
         top: 80px;
         right: 325px;
+        padding-top: 5px;
     }
     
 #weather {
@@ -89,7 +91,7 @@ line-height: 75px;
     width: 33%;
     text-align: center;
     float: right;
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
     position: relative;
     top: 50px;
 }
@@ -104,7 +106,7 @@ line-height: 75px;
     height: 400px;
     width: 33%;
     float: right;
-    background-color: hotpink;
+    /* background-color: hotpink; */
     text-align: center;
     position: relative;
     top: 50px;
@@ -115,7 +117,7 @@ line-height: 75px;
     height: 400px;
     width: 33%;
     float: right;
-    background-color: indigo;
+    /* background-color: indigo; */
     text-align: center;
     position: relative;
     top: 50px;
