--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ line-height: 75px;
         top: 80px;
         right: 325px;
         padding-top: 10px;
+        border-bottom: 1px gray solid;
     }
     
 #weather {
