--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,36 +245,45 @@ attraction-main-image{
     /* top: 50px; */
 }
 
+#attractions-main{
+    width: 67%;
+    height: auto;
+    float: right;
+    background-color: darkgreen;
+    position: relative;
+}
+
 /* .etosha-div {
 position: relativea;
 } */
 
+
 .etosha {
-    width: 22%;
+    width: 33%;
     background-color: red;
     text-align: center;
     float: right;
     position: absolute;
     top:150px;
-    left: 445px;
+    /* left: 445px; */
     /* clear: both; */
     /* display: inline-block; */
 }
 
 .swakopmund {
-    width:22%;
+    width:33%;
     background-color: blue;
     text-align: center;
-    /* float: right; */
+    float: right;
     position: absolute;
     top:150px;
-    left: 750px;
+    left: 400px;
     /* clear: both; */
     /* display: inline-block; */
 }
 
 .windhoek {
-    width: 22%;
+    width: 33%;
     background-color: yellow;
     text-align: center;
     /* float: right; */
