--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,8 +210,8 @@ img {
 /* attractions page */
 #attraction-page{
     width: 100%;
-    height: 700px;
-    background-color: salmon;
+    height: 400px;
+    /* background-color: salmon; */
     position: relative;
 }
 
@@ -240,7 +240,7 @@ attraction-main-image{
     top: 50px;
     right: 0px;
     /* padding-top: 10px; */
-    background-color: aqua;
+    /* background-color: aqua; */
     position: absolute;
     /* top: 50px; */
 }
@@ -249,15 +249,14 @@ attraction-main-image{
     width: 67%;
     height: auto;
     float: right;
-    background-color: darkgreen;
     position: relative;
 }
 
 .etosha {
     width: 33%;
-    background-color: red;
+    /* background-color: red; */
     text-align: center;
-    float: right;
+    /* float: right; */
     position: absolute;
     top:150px;
     /* left: 445px; */
@@ -267,7 +266,7 @@ attraction-main-image{
 
 .swakopmund {
     /* width:33%; */
-    background-color: blue;
+    /* background-color: blue; */
     text-align: center;
     /* float: right; */
     position: absolute;
@@ -284,7 +283,7 @@ width:33%;
 
 .windhoek {
     width: 33%;
-    background-color: yellow;
+    /* background-color: yellow; */
     text-align: center;
     /* float: right; */
     position: absolute;
