--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,25 +68,28 @@ h2 {
 #main-image {
     float: left;
     height: 400px;
-    clear: both;
     width: 33%;
     vertical-align: middle;
     position: relative;
     top: 50px;
-    padding-left: 10px;
+    clear: both;
+    /* padding-left: 10px; */
 }
 
 /* home info*/
 #home-info {
-    height: 450px;
+    width: 100%;
+    height: 500px;
     display: flex;
     padding-bottom: 10px;
+    position: relative;
+    background-color: darkgreen;
 }
 
 #about-namibia {
     text-align: center;
     position: absolute;
-    top: 150px;
+    top: 50px;
     right: 325px;
     padding-top: 10px;
     border-bottom: 1px gray solid;
@@ -208,9 +211,9 @@ img {
 }
 
 /* attractions page */
-#attraction-page{
+#attraction-page {
     width: 100%;
-    height: 400px;
+    height: 500px;
     /* background-color: salmon; */
     position: relative;
 }
@@ -227,8 +230,8 @@ img {
     /* line-height: 50px; */
 }
 
-attraction-main-image{
-     width: 100%;
+attraction-main-image {
+    width: 100%;
 }
 
 #attractions-intro {
@@ -236,7 +239,7 @@ attraction-main-image{
     width: 67%;
     /* line-height: 50px; */
     height: 100px;
-    float:right;
+    float: right;
     top: 50px;
     right: 0px;
     /* padding-top: 10px; */
@@ -245,7 +248,7 @@ attraction-main-image{
     /* top: 50px; */
 }
 
-#attractions-main{
+#attractions-main {
     width: 67%;
     height: auto;
     float: right;
@@ -258,7 +261,7 @@ attraction-main-image{
     text-align: center;
     /* float: right; */
     position: absolute;
-    top:150px;
+    top: 150px;
     /* left: 445px; */
     /* clear: both; */
     /* display: inline-block; */
@@ -270,15 +273,15 @@ attraction-main-image{
     text-align: center;
     /* float: right; */
     position: absolute;
-    top:150px;
+    top: 150px;
     /* left: 400px; */
     /* clear: both; */
     /* display: inline-block; */
 }
 
-#attractions-main > .swakopmund{
-left: 302.5px;
-width:33%;
+#attractions-main>.swakopmund {
+    left: 302.5px;
+    width: 33%;
 }
 
 .windhoek {
@@ -287,10 +290,8 @@ width:33%;
     text-align: center;
     /* float: right; */
     position: absolute;
-    top:150px;
-   right: 0px;
+    top: 150px;
+    right: 0px;
     /* clear: both; */
     /* display: inline-block; */
 }
-
-
