--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,84 +64,97 @@ h2 {
 }
 
 
-/* main -image*/
-#main-image {
-    height: 400px;
-    width: 33%;
-    float: left;
-    position: relative;
-    top: 50px;
-    clear: both;
-}
+
 
 /* home info*/
 #home-info {
     width: 100%;
     height: 500px;
-    display: flex;
-    padding-bottom: 10px;
+    /* background-color: salmon; */
     position: relative;
-    background-color: darkgreen;
+}
+
+/* main -image*/
+#home-image{
+    float: left;
+    /* height: 400px; */
+    clear: both;
+    width: 33%;
+    /* vertical-align: middle; */
+    position: absolute;
+    top: 50px;
+    /* padding-left: 10px; */
+    /* line-height: 50px; */
+}
+#main-image {
+    height:auto;
+    width: 100%;
+    position: absolute;
+    float: left;
+    /* top: 50px; */
+    /* clear: both; */
 }
 
 #about-namibia {
+    width: 67%;
     text-align: center;
     position: absolute;
+    float: right;
     top: 50px;
-    right: 325px;
-    padding-top: 10px;
+    right: 0px;
     border-bottom: 1px gray solid;
+    background-color: darkgreen;
 }
 
-#weather {
-    padding-top: 0px;
-    height: 250px;
-    width: 33%;
-    text-align: center;
-    float: right;
-    /* background-color: greenyellow; */
-    position: relative;
-    top: 150px;
-}
-
-.right-side {
-    position: relative;
-    right: 50px;
-}
-
-.right-side>h2 {
-    /* padding-bottom: 5px; */
-    height: 50px;
-}
-
-#time {
-    padding-top: 0px;
-    height: 250px;
-    width: 33%;
-    float: right;
-    /* background-color: hotpink; */
-    text-align: center;
-    position: relative;
-    top: 150px;
-}
-
-#location {
-    padding-top: 0px;
-    height: 250px;
-    width: 33%;
-    float: right;
-    /* background-color: indigo; */
-    text-align: center;
-    position: relative;
-    top: 150px;
-}
-
-.right-side {
+#home-main{
     width: 67%;
-    float: right;
-    line-height: 20px;
-    clear: both;
-    vertical-align: middle;
+    height: auto;
+    /* float: right; */
+    position: absolute;
+    right: 0px;
+    top: 50px;
+    background-color: aqua;
+}
+
+.weather {
+    width: 33%;
+    /* background-color: red; */
+    text-align: center;
+    /* float: right; */
+    position: absolute;
+    top: 150px;
+    /* left: 445px; */
+    /* clear: both; */
+    /* display: inline-block; */
+}
+
+.time{
+    /* width:33%; */
+    /* background-color: blue; */
+    text-align: center;
+    /* float: right; */
+    position: absolute;
+    top: 150px;
+    /* left: 400px; */
+    /* clear: both; */
+    /* display: inline-block; */
+}
+
+#home-main>.time {
+    left: 302.5px;
+    width: 33%;
+}
+
+.location {
+    width: 33%;
+    /* background-color: yellow; */
+    text-align: center;
+    /* float: right; */
+    position: absolute;
+    top: 150px;
+    right: 0px;
+    /* clear: both; */
+    /* display: inline-block; */
 }
 
 /* footer */
@@ -235,7 +248,6 @@ attraction-main-image {
 #attractions-intro {
     text-align: center;
     width: 67%;
-    /* line-height: 50px; */
     height: 100px;
     float: right;
     top: 50px;
@@ -243,7 +255,6 @@ attraction-main-image {
     /* padding-top: 10px; */
     /* background-color: aqua; */
     position: absolute;
-    /* top: 50px; */
 }
 
 #attractions-main {
@@ -251,7 +262,11 @@ attraction-main-image {
     height: auto;
     float: right;
     position: relative;
+    background-color: aqua;
 }
+
+
+
 
 .etosha {
     width: 33%;
