--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,4 +287,33 @@ attraction-main-image {
     /* display: inline-block; */
 }
 
+/* booking page */
+
+.booking-main {
+    width: 100%;
+    height: 500px;
+    background-color: salmon;
+    position: relative;
+    top:50px;
+}
+
+.booking-image {
+    width: 33%;
+    height: auto;
+    position:absolute;
+    float: left;
+}
+
+#shuttle-image {
+    width:100%;
+    position: absolute;
+}
+
+
+.booking-form {
+    width: 67%;
+    height: 400px;
+    background-color: chocolate;
+    float: right;
+}
 
