--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,8 +291,8 @@ attraction-main-image {
 
 .booking-main {
     width: 100%;
-    height: 500px;
-    background-color: salmon;
+    height: 550px;
+    /* background-color: salmon; */
     position: relative;
     top: 50px;
 }
@@ -313,7 +313,7 @@ attraction-main-image {
 .booking-form {
     width: 67%;
     height: 400px;
-    background-color: chocolate;
+    /* background-color: chocolate; */
     float: right;
 }
 
@@ -321,19 +321,19 @@ attraction-main-image {
     text-align: center;
     position: relative;
     margin: 0 auto;
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 form{
     width: 100%;
     position:absolute;
-    background-color: darkgreen
+    /* background-color: darkgreen */
 }
 
 .cient-details{
     width: 80%;
     height: auto;
-    background-color: burlywood;
+    /* background-color: burlywood; */
     position: relative;
     margin: 0 auto;
 
@@ -341,6 +341,7 @@ form{
 
 .cient-details > input {
     margin-left: 300px;
+    margin-bottom: 10px;
 }
 
 .cient-details > label {
@@ -359,3 +360,13 @@ textarea{
     padding: 10px;
     /* margin-left: 50px; */
 }
+
+button {
+    height: 50px;
+    background: goldenrod;
+    border: 1px black solid;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+  }
+  
