--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ footer {
     background-color: teal;
 }
 
-#home-main > div {
+#home-main>div {
     float: left;
 }
 
@@ -162,22 +162,54 @@ footer {
 
 /* gallery html */
 
-#pictures>.gallery>.row {
+#galler-page {
+    width: 100%;
+    height: 300px;
+    position: relative;
+    /* background-color: teal; */
+}
+
+.gallery-video {
+    width: 33%;
+    /* background-color: tomato; */
+    position: absolute;
+    top: 50px;
+    float: left;
+}
+
+#imapal-video {
+    width: 100%;
+}
+
+#pictures {
+    width: 100%;
+    /* height: 400px; */
+    position: relative;
+    /* top: 50px; */
+    /* background-color: violet; */
+    /* clear: both; */
+}
+
+.gallery-photos{
+clear: both;
+}
+
+#pictures>.gallery-photos>.row {
     line-height: 10px;
     column-count: 3;
     column-gap: 5px;
     height: auto;
-    clear: both;
+    /* clear: both; */
 }
 
-#pictures>.gallery,
+#pictures>.gallery-photos,
 img {
     width: 100%;
     height: auto;
     /* padding: 10px; */
     float: right;
     border: 1px solid black;
-    clear: both;
+    /* clear: both; */
 }
 
 .row {
@@ -190,14 +222,14 @@ img {
     /* margin-left: 5px; */
     /* display: inline-block; */
     vertical-align: middle;
-    /* background-color:yellow; */
+    /* background-color: yellow; */
 }
 
-.row::after {
+/* .row::after {
     content: "";
     clear: both;
     display: table;
-}
+} */
 
 /* attractions page */
 #attraction-page {
@@ -205,7 +237,7 @@ img {
     height: 550px;
     position: relative;
     /* background-color: salmon; */
-    
+
 }
 
 #attraction-img {
@@ -220,7 +252,7 @@ img {
     /* line-height: 50px; */
 }
 
-attraction-main-image {
+#attraction-main-image {
     width: 100%;
 }
 
@@ -319,7 +351,7 @@ attraction-main-image {
     top: 50px;
     /* background-color: chocolate; */
     float: right;
-    
+
 }
 
 #shuttle-booking-form {
@@ -329,13 +361,13 @@ attraction-main-image {
     /* background-color: blue; */
 }
 
-form{
+form {
     width: 100%;
-    position:absolute;
+    position: absolute;
     /* background-color: darkgreen */
 }
 
-.cient-details{
+.cient-details {
     width: 80%;
     height: auto;
     /* background-color: burlywood; */
@@ -344,20 +376,20 @@ form{
 
 }
 
-.cient-details > input {
+.cient-details>input {
     margin-left: 300px;
     margin-bottom: 10px;
 }
 
-.cient-details > label {
+.cient-details>label {
     position: absolute;
-    top:10px;
-    left:130px;
+    top: 10px;
+    left: 130px;
 }
 
 input,
 select,
-textarea{
+textarea {
     border-radius: 2px;
     border: 2px solid #777;
     box-sizing: border-box;
@@ -373,5 +405,4 @@ button {
     color: white;
     border-radius: 5px;
     padding: 10px;
-  }
-  
+}
