--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,7 @@ footer {
     width: 100%;
 }
 
+
 #pictures {
     width: 100%;
     /* height: 400px; */
@@ -217,7 +218,7 @@ img {
     width: 100%;
     /* margin: 10px; */
     /* padding: 5px; */
-    margin-top: 30px;
+    /* margin-top: 30px; */
     margin-bottom: 30px;
     /* margin-left: 5px; */
     /* display: inline-block; */
