--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ footer {
     width: 100%;
     height: 550px;
     position: relative;
-    background-color: teal;
+    /* background-color: teal; */
 }
 
 #home-main>div {
