--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,7 +326,7 @@ img {
 .booking-page {
     width: 100%;
     height: 550px;
-    background-color: teal;
+    /* background-color: teal; */
     position: relative;
     /* top: 50px; */
 }
