--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,10 +181,17 @@ footer {
     width: 33%;
     height: auto;
     float: left;;
+    padding-bottom: 50px;
 }
 
 #imapal-video {
     width: 100%;
+}
+
+#gallery-text {
+    text-align: center;
+    /* padding: 10px; */
+    background-color: #777;
 }
 
 
@@ -192,9 +199,11 @@ footer {
     width: 100%;
     /* height: 400px; */
     position: relative;
-    /* top: 50px; */
+    /* padding-top: 50px; */
+    margin-top: 50px;
     background-color: violet;
-    /* clear: both; */
+    clear: both;
+    border: 1px black solid;
 }
 
 .gallery-photos{
