--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,24 +164,30 @@ footer {
 
 #gallery-page {
     width: 100%;
-    height: 1000px;
+    /* height: 1000px; */
     position: relative;
     background-color: teal;
+    /* clear: both; */
 }
 
 #gallery-container {
     width: 100%;
     background-color: tomato;
-    position: absolute;
+    /* position: absolute; */
     top: 50px;
     /* float: left; */
 }
 
 .gallery-video {
     width: 33%;
-    height: auto;
+    /* height: auto; */
     float: left;;
-    padding-bottom: 50px;
+    /* padding-bottom: 0px; */
+    margin-bottom: 50px;
+    position: relative;
+    top: 50px;
+    clear:both;
+    background-color: maroon;
 }
 
 #imapal-video {
@@ -189,9 +195,13 @@ footer {
 }
 
 #gallery-text {
+    width: 67%;
     text-align: center;
     /* padding: 10px; */
     background-color: #777;
+    position: relative;
+    top: 50px;
+    float: right;
 }
 
 
@@ -200,14 +210,16 @@ footer {
     /* height: 400px; */
     position: relative;
     /* padding-top: 50px; */
-    margin-top: 50px;
+    /* margin-top: 50px; */
     background-color: violet;
-    clear: both;
+    /* clear: both; */
     border: 1px black solid;
+    clear: both;
 }
 
 .gallery-photos{
 clear: both;
+padding-top: 50px;
 }
 
 #pictures>.gallery-photos>.row {
