--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,17 @@
     border: none;
 }
 
-body {
+/* html, body {
+    margin: 0;
+    height: 100%;
+} */
+
+html, body  {
     font-family: Roboto, sans-serif;
     font-weight: 300;
     color: goldenrod;
+    height: 100%;
+    position: relative;
 }
 
 /* Headings*/
@@ -30,6 +37,15 @@ header {
 footer {
     clear: both;
     background-color: #777;
+
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    /* background-color: red; */
+    /* color: white; */
+    text-align: center;
+    /* margin-top: -200px; */
 }
 
 /* logo and menu */
@@ -71,25 +87,35 @@ footer {
 }
 
 /* home info*/
+
 #home-page {
     width: 100%;
-    height: 550px;
+    height: 625px;
     position: relative;
-    /* background-color: teal; */
 }
 
-#home-main>div {
-    float: left;
+#home-container {
+    width: 100%;
+    height: 100%;
+    background-color: tomato;
+    position: absolute;
+    /* top: 50px; */
+    /* bottom: 50px; */
+clear: both;
 }
 
 /* main -image*/
 #home-image {
     width: 33%;
-    height: auto;
+    /* height: auto; */
     float: left;
-    clear: both;
-    position: absolute;
+    ;
+    /* padding-bottom: 0px; */
+    margin-bottom: 50px;
+    position: relative;
     top: 50px;
+    clear: both;
+    background-color: maroon;
 }
 
 #main-image {
@@ -98,43 +124,62 @@ footer {
     border: none;
 }
 
-#about-namibia {
+#about-namibia-main {
     width: 67%;
     text-align: center;
-    position: absolute;
+    position: relative;
+    float: right;
+    top: 50px;
+    /* right: 0px; */
+    background-color: aquamarine;
+}
+
+
+#about-namibia {
+    width: 100%;
+    text-align: center;
+    position: relative;
     float: right;
     top: 50px;
     right: 0px;
 }
 
-#home-main {
+#about-namibia-text {width: 67%;
+text-align: center;
+background-color: #777;
+position: relative;
+top: 50px;
+float: right;}
+
+/* #home-main {
     width: 67%;
-    height: auto;
-    /* float: right; */
-    position: absolute;
+    height: auto; */
+/* float: right; */
+/* position: absolute;
     right: 0px;
     top: 50px;
-}
+} */
 
-.weather {
+#weather {
     width: 33%;
     text-align: center;
     position: absolute;
     top: 150px;
 }
 
-.time {
+#time {
     text-align: center;
-    top: 150px;
+    /* position: absolute;
+    top: 150px; */
 }
 
-#home-main>.time {
-    position: absolute;
+#home-main>#time {
+    /* position: absolute; */
     left: 302.5px;
     width: 33%;
 }
 
-.location {
+#location {
     width: 33%;
     text-align: center;
     position: absolute;
@@ -174,19 +219,20 @@ footer {
     width: 100%;
     background-color: tomato;
     /* position: absolute; */
-    top: 50px;
+    /* top: 50px; */
     /* float: left; */
 }
 
 .gallery-video {
     width: 33%;
     /* height: auto; */
-    float: left;;
+    float: left;
+    ;
     /* padding-bottom: 0px; */
     margin-bottom: 50px;
     position: relative;
     top: 50px;
-    clear:both;
+    clear: both;
     background-color: maroon;
 }
 
@@ -217,9 +263,9 @@ footer {
     clear: both;
 }
 
-.gallery-photos{
-clear: both;
-padding-top: 50px;
+.gallery-photos {
+    clear: both;
+    padding-top: 50px;
 }
 
 #pictures>.gallery-photos>.row {
