--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,6 @@
     border: none;
 }
 
-/* html, body {
-    margin: 0;
-    height: 100%;
-} */
-
 html, body  {
     font-family: Roboto, sans-serif;
     font-weight: 300;
@@ -37,15 +32,9 @@ header {
 footer {
     clear: both;
     background-color: #777;
-
     position: relative;
-    left: 0;
-    bottom: 0;
     width: 100%;
-    /* background-color: red; */
-    /* color: white; */
     text-align: center;
-    /* margin-top: -200px; */
 }
 
 /* logo and menu */
@@ -90,18 +79,8 @@ footer {
 
 #home-page {
     width: 100%;
-    height: 625px;
-    position: relative;
-}
-
-#home-container {
-    width: 100%;
-    height: 100%;
-    background-color: tomato;
+    /* height: 625px; */
     position: absolute;
-    /* top: 50px; */
-    /* bottom: 50px; */
-clear: both;
 }
 
 /* main -image*/
