--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,14 @@
     border: none;
 }
 
-html, body  {
+body  {
     font-family: Roboto, sans-serif;
     font-weight: 300;
     color: goldenrod;
-    height: 100%;
+    min-height: 100vh;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Headings*/
@@ -33,6 +35,8 @@ footer {
     clear: both;
     background-color: #777;
     position: relative;
+    left: 0;
+    margin-top: auto;
     width: 100%;
     text-align: center;
 }
@@ -79,8 +83,17 @@ footer {
 
 #home-page {
     width: 100%;
-    /* height: 625px; */
+    position: relative;
+}
+
+#home-container {
+    width: 100%;
+    height: 100%;
+    background-color: tomato;
     position: absolute;
+    /* top: 50px; */
+    /* bottom: 50px; */
+clear: both;
 }
 
 /* main -image*/
