--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,15 +143,6 @@ position: relative;
 top: 50px;
 float: right;}
 
-/* #home-main {
-    width: 67%;
-    height: auto; */
-/* float: right; */
-/* position: absolute;
-    right: 0px;
-    top: 50px;
-} */
-
 #weather {
     width: 33%;
     text-align: center;
@@ -203,7 +194,6 @@ float: right;}
     width: 100%;
     /* height: 1000px; */
     position: relative;
-    background-color: teal;
     /* clear: both; */
 }
 
@@ -225,7 +215,6 @@ float: right;}
     position: relative;
     top: 50px;
     clear: both;
-    background-color: maroon;
 }
 
 #imapal-video {
@@ -235,23 +224,19 @@ float: right;}
 #gallery-text {
     width: 67%;
     text-align: center;
-    /* padding: 10px; */
-    background-color: #777;
     position: relative;
     top: 50px;
     float: right;
 }
 
+#gallery-text > p {
+    padding: 10px;
+}
+
 
 #pictures {
     width: 100%;
-    /* height: 400px; */
     position: relative;
-    /* padding-top: 50px; */
-    /* margin-top: 50px; */
-    background-color: violet;
-    /* clear: both; */
-    border: 1px black solid;
     clear: both;
 }
 
@@ -263,39 +248,24 @@ float: right;}
 #pictures>.gallery-photos>.row {
     line-height: 10px;
     column-count: 3;
-    column-gap: 5px;
+    column-gap: 10px;
     height: auto;
-    /* clear: both; */
 }
 
 #pictures>.gallery-photos,
 img {
     width: 100%;
     height: auto;
-    /* padding: 10px; */
     float: right;
-    border: 1px solid black;
-    /* clear: both; */
 }
 
 .row {
     height: 400px;
     width: 100%;
-    /* margin: 10px; */
-    /* padding: 5px; */
-    /* margin-top: 30px; */
-    margin-bottom: 30px;
-    /* margin-left: 5px; */
-    /* display: inline-block; */
+    margin-bottom: 50px;
     vertical-align: middle;
-    background-color: yellow;
+  
 }
-
-/* .row::after {
-    content: "";
-    clear: both;
-    display: table;
-} */
 
 /* attractions page */
 #attraction-page {
