--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,6 @@ img {
     width: 100%;
     margin-bottom: 50px;
     vertical-align: middle;
-
 }
 
 /* attractions page */
@@ -266,8 +265,6 @@ img {
     width: 100%;
     height: 550px;
     position: relative;
-    /* background-color: salmon; */
-
 }
 
 #attraction-img {
@@ -286,7 +283,7 @@ img {
     width: 100%;
 }
 
-#attractions-intro {
+#attractions-text {
     text-align: center;
     width: 67%;
     height: 100px;
@@ -298,6 +295,10 @@ img {
     position: absolute;
 }
 
+#attractions-text > p {
+    padding: 10px;
+}
+
 #attractions-main {
     width: 67%;
     height: auto;
@@ -305,9 +306,6 @@ img {
     position: relative;
     background-color: aqua;
 }
-
-
-
 
 .etosha {
     width: 33%;
