--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,5 +380,6 @@ button {
         clear: both;
         margin-left: 0px;
         line-height: 25px;
-        letter-spacing:0
+        letter-spacing:0;
     }
+}
