--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ footer {
 #home-image {
     width: 33%;
     float: left;
-    margin-bottom: 50px;
+
     position: relative;
     top: 50px;
     clear: both;
@@ -142,26 +142,26 @@ footer {
 /* booking page */
 .booking-page {
     width: 100%;
-    height: 550px;
+    height: auto;
     position: relative;
 }
 
 #booking-image {
     width: 33%;
     height: auto;
-    position: absolute;
+    position: relative;
     top: 50px;
     float: left;
 }
 
 #shuttle-image {
     width: 100%;
-    position: absolute;
+    position: relative;
 }
 
-.booking-form {
+#booking-form {
     width: 67%;
-    height: 400px;
+    height: auto;
     position: relative;
     top: 50px;
     float: right;
@@ -279,10 +279,12 @@ button {
 }
 
 #pictures > .gallery-photos>.row {
+    width: 100%;
+    height: auto;
     line-height: 10px;
     column-count: 3;
     column-gap: 10px;
-    height: auto;
+    margin-bottom: 40px;
 }
 
 #pictures > .gallery-photos,
@@ -291,13 +293,6 @@ img {
     height: auto;
     float: right;
     margin-bottom: 10px;
-}
-
-.row {
-    height: 400px;
-    width: 100%;
-    margin-bottom: 50px;
-    vertical-align: middle;
 }
 
 /* attractions page */
