--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,17 +108,22 @@ footer {
 @media screen and (max-width: 950px) {
 
     #logo {
-        text-align:center;
+        letter-spacing: 1px;
         font-size: 200%;
         text-decoration: none;
         color: white;
-    }    
+    }      
 
     #nav-menu {
-        clear: both;
-        margin-left: 0px;
-        line-height: 25px;
-        letter-spacing:0;
+        width: 100%;
+        line-height: 20px;
+        letter-spacing:1px;
+        position:relative;
+        right:20px;
     }
 
+    #nav-menu li {
+    list-style-type: none;
+    margin-right: 10px;
+}
 }
