--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,11 @@ footer {
 }
 
 /* home info*/
-
+.hero-banner {
+    width: 100%;
+    height: 400px;
+    background-image: url(../images/Alchemist\ Namibia\ logo\ 2020\ v2-01.jpg) no-repear center center;
+}
 
 /* booking page */
 
