add style to anchor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 body {
     font-family: Roboto, sans-serif;
     font-weight: 300;
-    color: goldenrod;
+    color: #B7A354;
     min-height: 100vh;
     position: relative;
     display: flex;
@@ -96,6 +96,13 @@ footer {
     font-size:110%;
     padding: 10px 30px 10px
  }
+
+ a {
+    text-decoration: none;
+    color:#B7A354;
+    font-weight: bold;
+}
+
 
 /* booking page */
 
